# bupap

./: .gitignore  README.md  invoke.yaml  pyproject.toml  vetur.config.js
backend/: pyproject.toml
backend/src/bupap/: avatar.py  config.py  log_config.py  settings_default.toml
backend/src/bupap/common/: __init__.py  enums.py
backend/src/bupap/data/: db.sqlite
backend/src/bupap/db/: database.py  defaults.py  testdata.py
backend/src/bupap/db/alembic/: alembic.ini  env.py
backend/src/bupap/db/alembic/versions/: 2023-04-28_initial.py  2023-10-15_add_attached.py  2024-02-25_add_assignee_to_taskhistory.py
backend/src/bupap/db/tables/: assocs.py  history.py  role.py  task.py  user.py
backend/src/bupap/entrypoint/: bupap_alembic.py  main.py  strawberry.py  strawberry_gql.py
backend/src/bupap/gql/: __init__.py
backend/src/bupap/gql/common/: context.py  db_type.py
backend/src/bupap/gql/schema/: __init__.py  avatar.py  common.py  estimate.py  mutation.py  project.py  query.py  role.py  schedule.py  tag.py  task.py  team.py  user.py
backend/src/bupap/ui/: common.py
backend/src/bupap/ui/component/: __init__.py  avatar.py  custom_plotly.py  errors.py  router.py  separator_line.py  types.d.ts  user_card.py
backend/src/bupap/ui/component/kanban/: board.py  card.py  kanban_card_sfc.vue  kanban_list_sfc.vue
backend/src/bupap/ui/crud/: project.py  task.py  team.py  user.py  work.py
backend/src/bupap/ui/page/: __init__.py  index.py  login.py  tasks.py  teams.py
backend/src/bupap/ui/viewmodel/: login_information.py  task.py  team.py
docker/: Dockerfile
frontend/: .eslintignore  README.md  codegen.ts  graphql.schema.json  index.html  package-lock.json  package.json  quasar.config.js
frontend/src/apollo/: index.ts
frontend/src/boot/: apollo.ts
frontend/src/common/: helper.js  tree.ts
frontend/src/components/: AvatarEdit.vue  GanttChart.vue  QueryStatus.vue  TabHeader.vue  UserCard.vue  models.ts
frontend/src/components/kanban/: KanbanBoard.vue  KanbanCard.vue  KanbanList.vue  interfaces.ts
frontend/src/css/: quasar.variables.scss
frontend/src/gql/: gql.ts  graphql.ts  schema.graphql
frontend/src/layouts/: MainLayout.vue  ProjectLayout.vue  TeamLayout.vue  UserLayout.vue
frontend/src/pages/: IndexPage.vue  LoginPage.vue  ProjectsPage.vue  TeamsPage.vue  UsersPage.vue
frontend/src/pages/project/: BoardPage.vue  OverviewPage.vue
frontend/src/pages/task/: ActivityPage.vue  OverviewPage.vue
frontend/src/pages/team/: MembersPage.vue  OverviewPage.vue  SchedulePage.vue
frontend/src/pages/user/: ActivityPage.vue  OverviewPage.vue  ProfileEditDialog.vue
frontend/src/router/: routes.ts
frontend/src/stores/: active-user.ts
src/bupap/: avatar.py  config.py  injection.py  permissions.py  settings_default.toml
src/bupap/data/: EDITABLE_TAG
src/bupap/db/: __init__.py  database.py  defaults.py  testdata.py
src/bupap/db/alembic/versions/: 2023-11-25_index.py
src/bupap/db/tables/: __init__.py  base.py  estimate.py  history.py  project.py  role.py  schedule.py  task.py  team.py  user.py  work.py
src/bupap/entrypoint/: bupap_settings.py  main.py
src/bupap/ui/: common.py
src/bupap/ui/component/: __init__.py  adduser.py  avatar.py  custom_plotly.py  custom_plotly.vue  errors.js  errors.py  gantt.py  gantt.vue  gantt_sfc.vue  header.py  kanban.py  kanban.vue  kanban_card.py  kanban_card.vue  modify_user.py  pick_date.py  pick_date_sfc.vue  project_tree.py  router.js  router.py  types.d.ts
src/bupap/ui/component/kanban/: __init__.py  board.py  card.py  kanban_board.vue  kanban_board_sfc.vue  kanban_card.js  kanban_card_sfc.vue  kanban_list_sfc.vue  list.py  model.py
src/bupap/ui/crud/: common.py  project.py  task.py  user.py  work.py
src/bupap/ui/js_libs/: __init__.py  luxon.js
src/bupap/ui/page/: index.py  projects.py  tasks.py  teams.py  users.py
src/bupap/ui/viewmodel/: __init__.py  project.py  task.py  user.py  work.py
tasks/: __init__.py  dev.py  docker.py  helper.py  local.py  publish.py
