[tool.poetry]
name = "bupap"
version = "0.1.0"
description = ""
authors = ["valgarf <valgarf@posteo.de>"]
license = "AGPL-3.0-or-later"
readme = "README.md"
include = ["README.md", "settings.toml"]
exclude = ["src/bupap/data/EDITABLE_TAG"]

[tool.poetry.dependencies]
python = "^3.11"
nicegui = "^1.2.17"
sqlalchemy = "^2.0.16"
bcrypt = "^4.0.1"
loguru = "^0.7.0"
itsdangerous = "^2.1.2"
dynaconf = "^3.1.12"
python-avatars = "^1.3.1"
dependency-injector = "^4.41.0"
python-dateutil = "^2.8.2"
tzdata = "^2023.3"
more-itertools = "^9.1.0"
appdirs = "^1.4.4"
alembic = "^1.11.1"
jinja2 = "^3.1.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.2"
isort = "^5.12.0"
black = "^23.3.0"
icecream = "^2.1.3"

[tool.poetry.scripts]
bupap = 'bupap.entrypoint.main:run_poetry'
bupap-alembic = 'bupap.entrypoint.bupap_alembic:main'
bupap-settings = 'bupap.entrypoint.bupap_settings:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
line_length = 100
float_to_top = true
src_paths = ["src", "test", "alembic"]
sections = ['FUTURE', 'STDLIB', 'THIRDPARTY', 'FIRSTPARTY', 'LOCALFOLDER']
import_headings = {FUTURE = "future", STDLIB = "stl", THIRDPARTY = "third-party", FIRSTPARTY = "first-party", LOCALFOLDER = "local"}

[tool.black]
line-length = 100