[tool.poetry]
name = "bupap"
version = "0.1.1"
description = ""
authors = ["valgarf <valgarf@posteo.de>"]
license = "AGPL-3.0-or-later"
readme = "../README.md"
repository = "https://github.com/valgarf/bupap"
exclude = ["src/bupap/data/EDITABLE_TAG"]

[tool.poetry.dependencies]
python = "^3.11"
nicegui = {version="^1.3.6", extras=["plotly"]}
sqlalchemy = "^2.0.16"
bcrypt = "^4.0.1"
loguru = "^0.7.0"
itsdangerous = "^2.1.2"
dynaconf = "^3.1.12"
python-avatars = "^1.3.1"
dependency-injector = "^4.41.0"
python-dateutil = "^2.8.2"
tzdata = "^2023.3"
more-itertools = "^9.1.0"
appdirs = "^1.4.4"
alembic = "^1.11.1"
jinja2 = "^3.1.2"
strawberry-graphql = {extras = ["cli", "debug-server"], version = "^0.217.0"}
pytz = "^2023.3.post1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.2"
isort = "^5.12.0"
black = "^23.3.0"
icecream = "^2.1.3"
py-ts-interfaces = "^0.5.0"

[tool.poetry.scripts]
bupap-nicegui = 'bupap.entrypoint.main:run_poetry'
bupap = 'bupap.entrypoint.strawberry_gql:main'
bupap-alembic = 'bupap.entrypoint.bupap_alembic:main'
bupap-settings = 'bupap.entrypoint.bupap_settings:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
line_length = 100
float_to_top = true
src_paths = ["src", "test", "alembic"]
sections = ['FUTURE', 'STDLIB', 'THIRDPARTY', 'FIRSTPARTY', 'LOCALFOLDER']
import_heading_future ="future"
import_heading_stdlib="stl"
import_heading_thirdparty="third-party"
import_heading_firstparty="first-party"
import_heading_localfolder="local"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["F", "E", "W", "C90", "N", "D", "UP", "ANN", "TRIO", "S", "BLE", "FBT", "B", "A", "C4","EM", "FA", "ISC", "INP", "PIE", "PT", "Q", "RSE", "RET", "SLF", "SLOT", "SIM", "TID", "TCH", "TD", "FIX", "PL", "RUF"]
# S101: asserts are a useful tool, leave me alone
# D212 / D213: mutually exclusive
# ANN101: No, self should not be annotated
# ANN204: No, __init__ does not need a return type
# D107: No, I will not document __init__ methods. What do you expect them to do?
# TD003: there will not be an issue for every todo in the code
ignore=["S101", "D212", "ANN101", "ANN204", "D107", "TD003"]